(gilbertt)

Oops. Fixed a long standing bug in E-Urlwatch. Noone uses the ftp or get
buttons obviously ;)

-------------------------------------------------------------------------------

Fri Jan 14 21:36:41 CST 2000
(thebard)

The beginnings of the OpenGL support is in. Use it, build cool stuff. Mail
me at wmilas@rarcoa.com if something breaks or you want something
implemented

-------------------------------------------------------------------------------

Wed Jan 19 12:32:56 PST 2000
(KainX)

If we run out of images, don't just sit and spin like an idiot.  Tell the user
there's a problem and let them fix it.

-------------------------------------------------------------------------------

Thu Jan 20 08:51:36 CST 2000
(thebard)

Cleaned up more of the Demo code. Tried to track down the case where
Orthogonal projection is getting mapped 2 pixel up and to the right
in the viewport. Cant figure out why its happening. For now im just
adjusting the viewport 2 pixels down and left. Oh, also notice the
pretty colors on teh square. I PROMISE I'll put something more interesting
to look at in in a day or two. :P

-------------------------------------------------------------------------------

Thu Jan 20 20:15:26 GMT 2000
(gilbertt)

Argh. Finally got bugged by E-Exec's size not tesselating properly, and so I
added a --proper-size commandline option to fix that right up =)

Sorry StriderZ ;)

-------------------------------------------------------------------------------

Thu Jan 20 17:41:00 CST 2000
(thebard)

Added a config popup that lets you toggle between a flat rotating colored square and a rotating 3d purple cube. Anyone ahve any suggestions for any
E textures i could slap on the sides?

-------------------------------------------------------------------------------

Sun Jan 23 17:30:27 CST 2000
(thebard)

Added saving for configurations. Also started to add lighting. As you can see, its going horribly wrong right now. I'll fix it as soon as i can.
